fix(style): update global scrollbar style (#82)

--- a/src/index.css
+++ b/src/index.css
@@ -131,6 +131,8 @@
 @layer base {
   * {
     @apply border-border;
+    scrollbar-width: thin;
+    scrollbar-color: hsl(var(--border)) transparent;
   }
   html {
     @apply overflow-x-hidden;
